// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TreeSelect > multiple work > render work 1`] = `
"<div class="ix-trigger ix-trigger-md ix-trigger-with-suffix ix-selector ix-selector-md ix-selector-opened ix-selector-single ix-tree-select ix-control-trigger" tabindex="-1" aria-controls="control-overlay-17" aria-label="selector">
  <!---->
  <div class="ix-selector-content">
    <div class="ix-selector-item"><span class="ix-selector-item-label">Node 0</span>
      <!---->
    </div>
    <div class="ix-selector-input"><input class="ix-selector-input-inner" style="opacity: 0;" autocomplete="off" readonly="" value="">
      <!---->
    </div>
  </div>
  <div class="ix-trigger-suffix"><i class="ix-icon ix-icon-down" role="img" aria-label="down"></i></div>
  <!---->
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > custom keys work 1`] = `
"<div class="ix-trigger ix-trigger-md ix-trigger-with-suffix ix-selector ix-selector-md ix-selector-opened ix-selector-single ix-tree-select ix-control-trigger" tabindex="-1" aria-controls="control-overlay-6" aria-label="selector">
  <!---->
  <div class="ix-selector-content">
    <div class="ix-selector-item"><span class="ix-selector-item-label">Node 0</span>
      <!---->
    </div>
    <div class="ix-selector-input"><input class="ix-selector-input-inner" style="opacity: 0;" autocomplete="off" readonly="" value="">
      <!---->
    </div>
  </div>
  <div class="ix-trigger-suffix"><i class="ix-icon ix-icon-down" role="img" aria-label="down"></i></div>
  <!---->
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > render work 1`] = `
"<div class="ix-trigger ix-trigger-md ix-trigger-with-suffix ix-selector ix-selector-md ix-selector-opened ix-selector-single ix-tree-select ix-control-trigger" tabindex="-1" aria-controls="control-overlay-0" aria-label="selector">
  <!---->
  <div class="ix-selector-content">
    <div class="ix-selector-item"><span class="ix-selector-item-label">Node 0</span>
      <!---->
    </div>
    <div class="ix-selector-input"><input class="ix-selector-input-inner" style="opacity: 0;" autocomplete="off" readonly="" value="">
      <!---->
    </div>
  </div>
  <div class="ix-trigger-suffix"><i class="ix-icon ix-icon-down" role="img" aria-label="down"></i></div>
  <!---->
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > searchFn work 1`] = `
"<div class="ix-trigger ix-trigger-md ix-trigger-with-suffix ix-selector ix-selector-md ix-selector-single ix-tree-select ix-control-trigger" tabindex="-1" aria-controls="control-overlay-14" aria-label="selector" searchvalue="node">
  <!---->
  <div class="ix-selector-content">
    <div class="ix-selector-item"><span class="ix-selector-item-label">Node 0</span>
      <!---->
    </div>
    <div class="ix-selector-input"><input class="ix-selector-input-inner" style="opacity: 0;" autocomplete="off" readonly="" value="">
      <!---->
    </div>
  </div>
  <div class="ix-trigger-suffix"><i class="ix-icon ix-icon-down" role="img" aria-label="down"></i></div>
  <!---->
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > searchFn work 2`] = `
"<div class="ix-trigger ix-trigger-md ix-trigger-with-suffix ix-selector ix-selector-md ix-selector-single ix-tree-select ix-control-trigger" tabindex="-1" aria-controls="control-overlay-14" aria-label="selector" searchvalue="node">
  <!---->
  <div class="ix-selector-content">
    <div class="ix-selector-item"><span class="ix-selector-item-label">Node 0</span>
      <!---->
    </div>
    <div class="ix-selector-input"><input class="ix-selector-input-inner" style="opacity: 0;" autocomplete="off" readonly="" value="">
      <!---->
    </div>
  </div>
  <div class="ix-trigger-suffix"><i class="ix-icon ix-icon-down" role="img" aria-label="down"><svg viewBox="0 0 1024 1024" focusable="false" aria-hidden="true" data-icon="down">
        <path d="M503.234 694.123 249.575 440.464c-4.998-4.998-5.001-12.869-.003-17.867l27.39-27.39c5-5 12.927-4.939 17.926.06l217.281 217.281 217.281-217.28c4.999-5 12.927-5.06 17.925-.062l27.39 27.39c5 5 4.996 12.87-.002 17.868L521.104 694.123c-4.998 4.998-12.872 4.998-17.87 0Z"></path>
      </svg></i></div>
  <!---->
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > searchFn work 3`] = `
"<div class="ix-trigger ix-trigger-md ix-trigger-with-suffix ix-selector ix-selector-md ix-selector-single ix-tree-select ix-control-trigger" tabindex="-1" aria-controls="control-overlay-14" aria-label="selector" searchvalue="node">
  <!---->
  <div class="ix-selector-content">
    <div class="ix-selector-item"><span class="ix-selector-item-label">Node 0</span>
      <!---->
    </div>
    <div class="ix-selector-input"><input class="ix-selector-input-inner" style="opacity: 0;" autocomplete="off" readonly="" value="">
      <!---->
    </div>
  </div>
  <div class="ix-trigger-suffix"><i class="ix-icon ix-icon-down" role="img" aria-label="down"><svg viewBox="0 0 1024 1024" focusable="false" aria-hidden="true" data-icon="down">
        <path d="M503.234 694.123 249.575 440.464c-4.998-4.998-5.001-12.869-.003-17.867l27.39-27.39c5-5 12.927-4.939 17.926.06l217.281 217.281 217.281-217.28c4.999-5 12.927-5.06 17.925-.062l27.39 27.39c5 5 4.996 12.87-.002 17.868L521.104 694.123c-4.998 4.998-12.872 4.998-17.87 0Z"></path>
      </svg></i></div>
  <!---->
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > searchable work 1`] = `
"<div class="ix-trigger ix-trigger-md ix-trigger-with-suffix ix-selector ix-selector-md ix-selector-allow-input ix-selector-opened ix-selector-searchable ix-selector-single ix-tree-select ix-control-trigger" tabindex="-1" aria-controls="control-overlay-13" aria-label="selector">
  <!---->
  <div class="ix-selector-content">
    <div class="ix-selector-item"><span class="ix-selector-item-label">Node 0</span>
      <!---->
    </div>
    <div class="ix-selector-input"><input class="ix-selector-input-inner" style="opacity: 0;" autocomplete="off" readonly="" value="">
      <!---->
    </div>
  </div>
  <div class="ix-trigger-suffix"><i class="ix-icon ix-icon-down" role="img" aria-label="down"></i></div>
  <!---->
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > searchable work 2`] = `
"<div class="ix-trigger ix-trigger-md ix-trigger-with-suffix ix-selector ix-selector-md ix-selector-opened ix-selector-single ix-tree-select ix-control-trigger" tabindex="-1" aria-controls="control-overlay-13" aria-label="selector">
  <!---->
  <div class="ix-selector-content">
    <div class="ix-selector-input"><input class="ix-selector-input-inner" style="opacity: 0;" autocomplete="off" readonly="" value="">
      <!---->
    </div>
  </div>
  <div class="ix-trigger-suffix"><i class="ix-icon ix-icon-down" role="img" aria-label="down"><svg viewBox="0 0 1024 1024" focusable="false" aria-hidden="true" data-icon="down">
        <path d="M503.234 694.123 249.575 440.464c-4.998-4.998-5.001-12.869-.003-17.867l27.39-27.39c5-5 12.927-4.939 17.926.06l217.281 217.281 217.281-217.28c4.999-5 12.927-5.06 17.925-.062l27.39 27.39c5 5 4.996 12.87-.002 17.868L521.104 694.123c-4.998 4.998-12.872 4.998-17.87 0Z"></path>
      </svg></i></div>
  <!---->
</div>
<!--teleport start-->
<!--teleport end-->"
`;
